updated styles for cta button and fixed a few aligning issues

--- a/client/src/components/categories/styles/category.scss
+++ b/client/src/components/categories/styles/category.scss
@@ -3,7 +3,9 @@
     border-radius: 5px;
 
     h1 {
-        margin: 50px 0 10px 0;
+        margin: 40px 0 10px 0;
+        font-size: 2rem;
+        font-family: "Montserrat"
     }
 
     .description {
