--- a/client/src/components/header/styles/header.scss
+++ b/client/src/components/header/styles/header.scss
@@ -12,13 +12,17 @@
     align-items: center;
 
     .cta {
-        color: black;
+        color: white;
         padding: 15px;
-        border-radius: 10px;
         text-decoration: none;
         font-size: 1.3rem;
-        background-color: white;
+        background-color: darkcyan;
         box-shadow: 8px 4px 8px 0 rgba(0,0,0,0.2);
         font-family: "Montserrat";
+        margin-top: 450px;
+        font-weight: bold;
+        opacity: .9;
+        width: 100%;
+        border: .3px solid black;
     }
 }
